--- a/styles/darkmode.css
+++ b/styles/darkmode.css
@@ -114,7 +114,7 @@
   will-change: clip-path, opacity;
   --ripple-x: 50vw;
   --ripple-y: 50vh;
-  animation: expandRipple 1.2s cubic-bezier(0.6, 0.1, 0.3, 1) forwards; /* faster expansion */
+  animation: expandRipple 1.2s cubic-bezier(2, 0.1, 2, 1) forwards; /* faster expansion */
 }
 
 /* Theme overlays */
